kubernetes/golang-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: go
  labels:
    name: go
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: go
    spec:
      containers:
        - name: go
          image: rifkiadrn/addressbook_server:latest
      restartPolicy: Always
