kubernetes/golang-service.yml
apiVersion: v1
kind: Service
metadata:
  name: go
  labels:
    service: go
spec:
  selector:
    app: go
  ports:
    - port: 5000
      targetPort: 5000
